--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,6 +1,19 @@
 version: '3.7'
 
 services:
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    depends_on:
+      - db
+    restart: on-failure
+    ports:
+      - 9000:9000
+    environment:
+      PORT: 9000
+      MONGO_URL: mongodb://db/todo
+
   db:
     image: mongo:4.4-rc-bionic
     restart: always
