--- a/backend/package.json
+++ b/backend/package.json
@@ -6,14 +6,14 @@
   "scripts": {
     "build": "babel src --out-dir .dist",
     "start": "node .dist",
-    "dev": "DEBUG=api:* nodemon -r dotenv/config --exec babel-node src",
+    "dev": "DEBUG=api:* npx ts-node ./src",
+    "tsc": "tsc",
     "lint": "./node_modules/.bin/eslint . --fix",
     "test": "jest"
   },
   "author": "Jorge L. Alfaro",
   "license": "ISC",
   "dependencies": {
-    "@babel/polyfill": "^7.10.1",
     "cors": "^2.8.5",
     "debug": "^4.3.1",
     "dotenv": "^8.2.0",
@@ -21,10 +21,7 @@
     "mongoose": "^5.12.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.13.16",
-    "@babel/core": "^7.13.16",
-    "@babel/node": "^7.13.13",
-    "@babel/preset-env": "^7.13.15",
+    "@types/debug": "^4.1.5",
     "babel-jest": "^26.6.3",
     "eslint": "^7.24.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -36,7 +33,9 @@
     "lint-staged": "^10.5.4",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
-    "supertest": "^6.1.3"
+    "supertest": "^6.1.3",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
   },
   "lint-staged": {
     "*.js": [
