--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "babel src --out-dir .dist",
     "start": "node .dist",
-    "dev": "DEBUG=api:* npx ts-node ./src",
+    "dev": "DEBUG=api:* nodemon --watch 'src/**' --ext 'js,ts,json' --ignore 'src/**/*.test.ts' --exec 'ts-node src/index.ts'",
     "tsc": "tsc",
     "lint": "./node_modules/.bin/eslint . --fix",
     "test": "jest"
@@ -21,7 +21,9 @@
     "mongoose": "^5.12.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/debug": "^4.1.5",
+    "@types/express": "^4.17.11",
     "babel-jest": "^26.6.3",
     "eslint": "^7.24.0",
     "eslint-config-airbnb-base": "^14.2.1",
