--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "babel src --out-dir .dist",
     "start": "node .dist",
-    "dev": "DEBUG=api:* nodemon --watch 'src/**' --ext 'js,ts,json' --ignore 'src/**/*.test.ts' --exec 'ts-node src/index.ts'",
+    "dev": "DEBUG=api:* nodemon --watch 'src/**' --ext 'js,ts,json' --ignore 'src/**/*.test.ts' --exec 'ts-node src/app/index.ts'",
     "tsc": "tsc",
     "lint": "./node_modules/.bin/eslint . --fix",
     "test": "jest"
@@ -18,12 +18,15 @@
     "debug": "^4.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "glob": "^7.1.6",
+    "mongodb": "^3.6.6",
     "mongoose": "^5.12.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.11",
+    "@types/glob": "^7.1.3",
     "babel-jest": "^26.6.3",
     "eslint": "^7.24.0",
     "eslint-config-airbnb-base": "^14.2.1",
