--- a/backend/package.json
+++ b/backend/package.json
@@ -18,15 +18,14 @@
     "debug": "^4.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "glob": "^7.1.6",
-    "mongodb": "^3.6.6",
-    "mongoose": "^5.12.5"
+    "mongodb": "^3.6.6"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.11",
     "@types/glob": "^7.1.3",
+    "@types/mongodb": "^3.6.12",
     "babel-jest": "^26.6.3",
     "eslint": "^7.24.0",
     "eslint-config-airbnb-base": "^14.2.1",
